--- a/templates/retrain.html
+++ b/templates/retrain.html
@@ -1,10 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
-<article class='media content-section'>
-    <div class="alert alert-info">
-      <h6>Current Best model : {{best_model}}</h6>
-    </div>
-</article>
+<div class="alert alert-info">
+  Current Best model : {{best_model}}
+</div>
+<div class="alert alert-primary">
+  {{ text }}
+</div>
 <div class="row">
     <div class="col-md-4">
         <div class="content-section">
@@ -49,7 +50,7 @@
                 <br><br>
                 <input type="text" class="form-control" name="n_estimators" placeholder="n_estimators (int)" required="required" /><br>
                 <input type="text" class="form-control" name="max_depth" placeholder="max_depth (int)" required="required" /><br>
-                <br><br>
+                <br><br><br><br><br>
                 <button type="submit" class="btn btn-primary btn-block btn-small">Retrain</button>
               </fieldset>
             </form>
@@ -69,17 +70,12 @@
                 <input type="text" class="form-control" name="n_estimators" placeholder="n_estimators (int)" required="required" /><br>
                 <input type="text" class="form-control" name="max_depth" placeholder="max_depth (int)" required="required" /><br>
                 <input type="text" class="form-control" name="learning_rate" placeholder="learning_rate (float:0-1)" required="required" /><br>
-                <br><br>
+                <br><br><br>
                 <button type="submit" class="btn btn-primary btn-block btn-small">Retrain</button>
               </fieldset>
             </form>
         </div>
     </div>
 </div>
-<article class='media content-section'>
-    <div class="alert alert-primary">
-        {{ text }}
-    </div>
-</article>
 
 {% endblock content %}
